--- a/style/clock.css
+++ b/style/clock.css
@@ -1,4 +1,6 @@
-html, body, .container {
+html,
+body,
+.container {
   height: 100%;
 }
 
@@ -9,7 +11,8 @@ body {
   justify-content: center;
 
   background: #312e2b;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 5em;
   text-align: center;
 }
@@ -18,9 +21,9 @@ body {
   display: grid;
   width: 100%;
   grid-template:
-    "clock_top" 1fr
-    "buttons" auto
-    "clock_button" 1fr
+    'clock_top' 1fr
+    'buttons' auto
+    'clock_button' 1fr
     / auto;
 
   max-width: 25rem;
