--- a/style/clock.css
+++ b/style/clock.css
@@ -23,14 +23,15 @@ body {
   grid-template:
     'clock_top' 1fr
     'buttons' auto
-    'clock_button' 1fr
+    'clock_bottom' 1fr
     / auto;
 
   max-width: 25rem;
-  max-height: 40rem;
+  max-height: 50rem;
 }
 
 .buttons {
+  grid-area: buttons;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -61,6 +62,12 @@ body {
   cursor: pointer;
   font: inherit;
 }
+.clock--top {
+  grid-area: clock_top;
+}
+.clock--bottom {
+  grid-area: clock_bottom;
+}
 
 .clock {
   display: flex;
@@ -81,6 +88,26 @@ body {
   color: #fff;
   background: linear-gradient(135deg, #eba249, #e38528);
 }
+.clock[datetime="PT0M0S"] {
+  color: #fff;
+  background: linear-gradient(135deg, #ae2c33, #ec3339);
+}
+
 .clock--top .clock {
   transform: rotate(180deg);
+}
+
+@media (orientation: landscape) {
+  .container {
+    grid-template:
+      'buttons buttons' auto
+      'clock_top clock_bottom' 1fr
+      / 1fr 1fr;
+
+    max-width: 50rem;
+    max-height: 25rem;
+  }
+  .clock--top .clock {
+    transform: none;
+  }
 }
